# LibAFL

./: .gitignore  Cargo.toml
.github/workflows/: build_and_test.yml
crates/libafl_intelpt/src/: decoder.rs  linux.rs
crates/libafl_qemu/src/modules/systemmode/: intel_pt.rs
crates/libafl_qemu/src/qemu/: config.rs  systemmode.rs
fuzzers/binary_only/intel_pt_baby_fuzzer/: Cargo.toml
fuzzers/binary_only/intel_pt_baby_fuzzer/src/: main.rs
fuzzers/binary_only/intel_pt_command_executor/: Cargo.toml
fuzzers/binary_only/intel_pt_command_executor/src/: main.rs
fuzzers/binary_only/qemu_launcher/src/: client.rs
fuzzers/mc2_fuzzer/: Cargo.toml  README.md  branch_policy.txt  build.rs  harness.c
fuzzers/mc2_fuzzer/harness/: .gitignore  CMakeLists.txt  Makefile  harness.c
fuzzers/mc2_fuzzer/harness/skeleton/: Skeleton.cpp
fuzzers/mc2_fuzzer/src/: dummy_in_process_executor.rs  main.rs  mc2_fuzzer.rs  mc2_state.rs
libafl/src/executors/hooks/: intel_pt.rs
libafl/src/executors/inprocess/: mod.rs
libafl/src/feedbacks/: intel_pt.rs
libafl/src/observers/: mod.rs
libafl_intelpt/src/: lib.rs
libafl_qemu/libafl_qemu_build/src/: bindings.rs
libafl_qemu/src/: lib.rs
libafl_qemu/src/qemu/: config.rs  qemu_opt.rs  systemmode.rs
