[package]
name = "mc2_fuzzer"
version = "0.1.0"
edition = "2021"
authors = ["Marco Cavenati <cavenati@eurecom.fr>", "Vincenzo Mezzela <mezzela@eurecom.fr>"]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libafl = { path = "../../libafl/" }
libafl_targets = { path = "../../libafl_targets/", features = ["sancov_pcguard_edges", "sancov_cmplog", "libfuzzer"] }
lazy_static = "1.4"
rand = "0.8"
num_enum = "0.6"
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] } # serialization lib


[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }